# spotian

./: CMakeLists.txt  Metadata.cpp  Metadata.h  Player.cpp  Player.h  Playlist.cpp  Playlist.h  README.md  Recorder.cpp  Recorder.h  SpotifyController.cpp  SpotifyController.h  Timeout.cpp  Timeout.h  Variables.cpp  Variables.h  VirtualDisplay.cpp  VirtualDisplay.h  spotian.cpp  timeout.cpp  timeout.h  tools.cpp  tools.h  variables.h
